# axum_example

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
migrations/: 20230510112701_create_user.sql
src/: main.rs
