[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0.71"
sqlx = { version= "0.6.3", features = ["postgres", "runtime-tokio-native-tls"] }
